# jinjatoyaml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
charts/my-app/: Chart.yaml  values.yaml
charts/my-app/templates/: _helpers.tpl  deployment.yaml  service.yaml
manifests/nprod/: deployment.yaml  helm-values.yaml
manifests/prod/: deployment.yaml  helm-values.yaml
scripts/: render_templates.py  render_templates.sh  validate_helm_charts.sh
templates/: deployment.yaml.j2  helm-values.yaml.j2
tests/: test_render.py
values/: base.yaml  nprod.yaml  prod.yaml
